Save points: Correct/clarify conditionals

--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -576,7 +576,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 	</d-box>
 
 	<!-- XFT -->
-	<h4>If you haven't destroyed the Shadowguys's contracts or Shadowguy has been LOST, and less than 5 Darkners (including Shadowguy) have been LOST</h4>
+	<h4>If you haven't destroyed the Shadowguys's contracts or Shadowguy has been LOST, and less than 5 TV World Darkners (including Shadowguy) have been LOST</h4>
 	<p>Also plays if you've destroyed the Shadowguys's contracts before they were LOST.</p>
 	<p></p>
 	<p class="note">The performers are absent, but the crowd is present.</p>
@@ -589,7 +589,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 	</d-box>
 
 	<!-- XFF -->
-	<h4>If 5 or more TV World Darkners (including Shadowguy) have been LOST</h4>
+	<h4>If Shadowguy and 4 or more other TV World Darkners have been LOST</h4>
 	<p>Also plays if you've destroyed the Shadowguys's contracts before they were LOST.</p>
 	<p></p>
 	<p class="note">Both performers and crowd are absent.</p>
@@ -694,7 +694,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 		<d-text asterisk>(You are filled with a certain power.)</d-text>
 	</d-box>
 
-	<h4>Subsequent times, if you know about the axe</h4>
+	<h4>First time after learning about the axe</h4>
 	<!-- And if you haven't moved on to the 2nd Sanctuary but if you have then that. Y'know. Makes it impossible to use this save point -->
 	<p>This narration does not play on the Weird Route.</p>
 
