Add chapters field to page sources, make their rendering more compact
Before you'd have to list the same file over and over for each chapter you were pulling from. Now each file only gets named once, and the individual chapter versions automatically get linked :)

--- a/contribute/template.html
+++ b/contribute/template.html
@@ -9,8 +9,8 @@ credits: >
 
 sources:
   -
-    url: "https://code.deltarune.wiki/"
     name: gml_GlobalScript_script_name_here
+    chapters: [1, 2, 3, 4]
 ---
 <section class="d-section" id="firstsection">
 	<h2>Example section</h2>
