--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -5,17 +5,14 @@ description: >
 # Want to get stuff from the latest chapter because that'll also have all the equipment from previous chapters
 sources:
   -
-    specifier: Chapter 4
-    # url: "https://code.deltarune.wiki/ch4/gml_globalscript_scr_weaponinfo"
     name: gml_GlobalScript_scr_weaponinfo
+    chapters: [4]
   -
-    specifier: Chapter 4
-    # url: "https://code.deltarune.wiki/ch4/gml_globalscript_scr_armorinfo"
     name: gml_GlobalScript_scr_armorinfo
+    chapters: [4]
   -
-    specifier: Chapter 4
-    # url: "https://code.deltarune.wiki/ch4/gml_object_obj_darkcontroller_step_0"
     name: gml_Object_obj_darkcontroller_Step_0
+    chapters: [4]
 ---
 {% comment %}
 The value of global.submenu controls which editor you're in:
