--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -5,45 +5,13 @@ description: >
   <p>Save points not listed here have no additional text accompanying the save menu.</p>
 sources:
   -
-    specifier: Chapter 1
-    url: "https://code.deltarune.wiki/ch1/gml_globalscript_scr_roomname"
     name: gml_GlobalScript_scr_roomname
-    note: for save point names
+    chapters: [1, 2, 3, 4]
+    note: location names
   -
-    specifier: Chapter 1
-    url: "https://code.deltarune.wiki/ch1/gml_object_obj_savepoint_other_10"
     name: gml_Object_obj_savepoint_Other_10
-    note: for save point text
-  -
-    specifier: Chapter 2
-    url: "https://code.deltarune.wiki/ch2/gml_globalscript_scr_roomname"
-    name: gml_GlobalScript_scr_roomname
-    note: for save point names
-  -
-    specifier: Chapter 2
-    url: "https://code.deltarune.wiki/ch2/gml_object_obj_savepoint_other_10"
-    name: gml_Object_obj_savepoint_Other_10
-    note: for save point text
-  -
-    specifier: Chapter 3
-    # url: "https://code.deltarune.wiki/ch3/gml_globalscript_scr_roomname"
-    name: gml_GlobalScript_scr_roomname
-    note: for save point names
-  -
-    specifier: Chapter 3
-    # url: "https://code.deltarune.wiki/ch3/gml_object_obj_savepoint_other_10"
-    name: gml_Object_obj_savepoint_Other_10
-    note: for save point text
-  -
-    specifier: Chapter 4
-    # url: "https://code.deltarune.wiki/ch4/gml_globalscript_scr_roomname"
-    name: gml_GlobalScript_scr_roomname
-    note: for save point names
-  -
-    specifier: Chapter 4
-    # url: "https://code.deltarune.wiki/ch4/gml_object_obj_savepoint_other_10"
-    name: gml_Object_obj_savepoint_Other_10
-    note: for save point text
+    chapters: [1, 2, 3, 4]
+    note: actual narration
 ---
 {% comment %}
 Room IDs retrieved from scr_get_room_list() in gml_GlobalScript_scr_get_room_by_id.gml
