Equipment: Add individual object IDs

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -31,7 +31,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Kris's swords</h2>
 	<p>None of the swords listed below can be equipped by anyone but Kris. See <a href="#other">Other weapons</a> for swords that can be equipped by others.</p>
 
-	<h3>Wood Blade</h3>
+	<h3 id="woodblade">Wood Blade</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -42,7 +42,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<p>When trying to equip to other party members.</p>
 
 	<h5>Susie</h5>
-	<h6>Before Ralsei first joins the party</h6>
+	<h6>Initial</h6>
 	<d-box theme="objreact">
 		<d-speaker>Susie</d-speaker>
 		<d-text>... You have a SWORD!?</d-text>
@@ -70,7 +70,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Spookysword</h3>
+	<h3 id="spookysword">Spookysword</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -101,7 +101,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Trefoil</h3>
+	<h3 id="trefoil">Trefoil</h3>
 	<p>Unused item that's not available in the playable game, but included for completion.</p>
 
 	<h4>Description</h4>
@@ -134,7 +134,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Twisted Sword</h3>
+	<h3 id="twistedsword">Twisted Sword</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -165,7 +165,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Bounce Blade</h3>
+	<h3 id="bounceblade">Bounce Blade</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -197,7 +197,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Mecha Saber</h3>
+	<h3 id="mechasaber">Mecha Saber</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -229,7 +229,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Saber 10</h3>
+	<h3 id="saber10">Saber 10</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -261,7 +261,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Winglade</h3>
+	<h3 id="winglade">Winglade</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -294,7 +294,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Susie's axes</h2>
 	<p>None of the axes listed below can be equipped by anyone but Susie.</p>
 
-	<h3>Mane Ax</h3>
+	<h3 id="maneax">Mane Ax</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -325,7 +325,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Brave Ax</h3>
+	<h3 id="braveax">Brave Ax</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -357,7 +357,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Devilsknife</h3>
+	<h3 id="devilsknife">Devilsknife</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -389,7 +389,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Auto Axe</h3>
+	<h3 id="autoaxe">Auto Axe</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -420,7 +420,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Toxic Axe</h3>
+	<h3 id="toxicaxe">Toxic Axe</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -451,7 +451,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Justice Axe</h3>
+	<h3 id="justiceaxe">Justice Axe</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -482,7 +482,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Absorb Ax</h3>
+	<h3 id="absorbax">Absorb Ax</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -515,7 +515,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Ralsei's scarves</h2>
 	<p>None of the scarves listed below can be equipped by anyone but Ralsei.</p>
 
-	<h3>Red Scarf</h3>
+	<h3 id="redscarf">Red Scarf</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -546,7 +546,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Ragger</h3>
+	<h3 id="ragger">Ragger</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -577,7 +577,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Dainty Scarf</h3>
+	<h3 id="daintyscarf">Dainty Scarf</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -608,7 +608,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Cheer Scarf</h3>
+	<h3 id="cheerscarf">Cheer Scarf</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -639,7 +639,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Fiber Scarf</h3>
+	<h3 id="fiberscarf">Fiber Scarf</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -671,7 +671,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Ragger 2</h3>
+	<h3 id="ragger2">Ragger 2</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -703,7 +703,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Puppet Scarf</h3>
+	<h3 id="puppetscarf">Puppet Scarf</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -735,7 +735,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Flex Scarf</h3>
+	<h3 id="flexscarf">Flex Scarf</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -766,7 +766,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Scarf Mark</h3>
+	<h3 id="scarfmark">Scarf Mark</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -802,7 +802,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Noelle's rings</h2>
 	<p>None of the rings listed below can be equipped by anyone but Noelle.</p>
 
-	<h3>Snow Ring</h3>
+	<h3 id="snowring">Snow Ring</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -833,7 +833,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Thorn Ring</h3>
+	<h3 id="thornring">Thorn Ring</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -862,7 +862,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Freeze Ring</h3>
+	<h3 id="freezering">Freeze Ring</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -895,7 +895,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Other weapons</h2>
 	<p>Equippable by multiple or no party members.</p>
 
-	<h3>Everybody Weapon</h3>
+	<h3 id="everybodyweapon">Everybody Weapon</h3>
 	<p>Equippable by Kris, Susie, Ralsei, and Noelle.</p>
 
 	<h4>Description</h4>
@@ -927,7 +927,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Broken Sword</h3>
+	<h3 id="brokensword">Broken Sword</h3>
 	<p>Cannot be equipped by any party member.</p>
 
 	<h4>Description</h4>
@@ -960,7 +960,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Black Shard</h3>
+	<h3 id="blackshard">Black Shard</h3>
 	<p>Equippable by Kris and Noelle.</p>
 
 	<h4>Description</h4>
@@ -990,7 +990,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Jingle Blade</h3>
+	<h3 id="jingleblade">Jingle Blade</h3>
 	<p>Equippable by Kris and Noelle.</p>
 
 	<h4>Description</h4>
@@ -1024,7 +1024,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Armor</h2>
 	<p>Armor can normally be equipped by all party members, unless specified otherwise.</p>
 
-	<h3>Attempting to remove armor</h3>
+	<h3 id="remove">Attempting to remove armor</h3>
 	<p>Most characters allow you to remove their equipment (leaving that armor slot blank, instead of replacing it with another armor) without saying anything. The exception is Susie, who reacts as follows:</p>
 	<d-box theme="objreact">
 		<d-speaker>Susie</d-speaker>
@@ -1032,7 +1032,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 	<p class="note">Susie's armor is not removed.</p>
 
-	<h3>Amber Card</h3>
+	<h3 id="ambercard">Amber Card</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1063,7 +1063,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Dice Brace</h3>
+	<h3 id="dicebrace">Dice Brace</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1094,7 +1094,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Pink Ribbon</h3>
+	<h3 id="pinkribbon">Pink Ribbon</h3>
 
 	<h4>Description</h4>
 	<h5>Outside of Chapter 3</h5>
@@ -1147,7 +1147,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>White Ribbon</h3>
+	<h3 id="whiteribbon">White Ribbon</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1194,7 +1194,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Iron Shackle</h3>
+	<h3 id="ironshackle">Iron Shackle</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1225,7 +1225,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Mouse Token</h3>
+	<h3 id="mousetoken">Mouse Token</h3>
 	<p>Unused, but included for completion.</p>
 
 	<h4>Description</h4>
@@ -1263,7 +1263,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Jevilstail</h3>
+	<h3 id="jevilstail">Jevilstail</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1294,7 +1294,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Silver Card</h3>
+	<h3 id="silvercard">Silver Card</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1325,7 +1325,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Twin Ribbon</h3>
+	<h3 id="twinribbon">Twin Ribbon</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1358,7 +1358,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Glow Wrist</h3>
+	<h3 id="glowwrist">Glow Wrist</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1389,7 +1389,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Chain Mail</h3>
+	<h3 id="chainmail">Chain Mail</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1420,7 +1420,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>B. Shot Bowtie</h3>
+	<h3 id="bshotbowtie">B. Shot Bowtie</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1451,7 +1451,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Spike Band</h3>
+	<h3 id="spikeband">Spike Band</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1483,7 +1483,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Silver Watch</h3>
+	<h3 id="silverwatch">Silver Watch</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1514,7 +1514,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Tension Bow</h3>
+	<h3 id="tensionbow">Tension Bow</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1528,7 +1528,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Mannequin</h3>
+	<h3 id="mannequin">Mannequin</h3>
 	<p>This can only be equipped by Kris.</p>
 
 	<h4>Description</h4>
@@ -1560,7 +1560,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Dark Gold Band</h3>
+	<h3 id="darkgoldband">Dark Gold Band</h3>
 	<p>Unused. Some of its data appears to be copied over from the Mannequin; party reactions are identical to the Mannequin's, as is the fact that this can only be equipped by Kris.</p>
 
 	<h4>Description</h4>
@@ -1592,7 +1592,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Sky Mantle</h3>
+	<h3 id="skymantle">Sky Mantle</h3>
 	<p>Unused, but included for completion.</p>
 
 	<h4>Description</h4>
@@ -1608,7 +1608,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Spike Shackle</h3>
+	<h3 id="spikeshackle">Spike Shackle</h3>
 	<p>Unused, but included for completion.</p>
 
 	<h4>Description</h4>
@@ -1638,7 +1638,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Frayed Bowtie</h3>
+	<h3 id="frayedbowtie">Frayed Bowtie</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1671,7 +1671,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Dealmaker</h3>
+	<h3 id="dealmaker">Dealmaker</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1703,7 +1703,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Royal Pin</h3>
+	<h3 id="royalpin">Royal Pin</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1735,7 +1735,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Shadow Mantle</h3>
+	<h3 id="shadowmantle">Shadow Mantle</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1769,7 +1769,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Lode Stone</h3>
+	<h3 id="lodestone">Lode Stone</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1838,7 +1838,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Ginger Guard</h3>
+	<h3 id="gingerguard">Ginger Guard</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1870,7 +1870,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Blue Ribbon</h3>
+	<h3 id="blueribbon">Blue Ribbon</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1979,7 +1979,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Tenna Tie</h3>
+	<h3 id="tennatie">Tenna Tie</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2011,7 +2011,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Waferguard</h3>
+	<h3 id="waferguard">Waferguard</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2046,7 +2046,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Mystic Band</h3>
+	<h3 id="mysticband">Mystic Band</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2078,7 +2078,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Power Band</h3>
+	<h3 id="powerband">Power Band</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2110,7 +2110,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Princess Ribbon</h3>
+	<h3 id="princessribbon">Princess Ribbon</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2143,7 +2143,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3>Gold Widow</h3>
+	<h3 id="goldwidow">Gold Widow</h3>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
