Document Light World items

--- a/misc/index.html
+++ b/misc/index.html
@@ -9,7 +9,8 @@ description: >
 	<ul>
 		<li><a href="{{ '/misc/equipment' | relative_url }}">Equipment</a> - Armor and weapons for the party</li>
 		<!-- <li><a href="{{ '/misc/darkitems' | relative_url }}">Dark World items</a>, including key items</li> -->
-		<!-- <li><a href="{{ '/misc/lightitems' | relative_url }}">Light World items</a></li> -->
+		<li><a href="{{ '/misc/lightitems' | relative_url }}">Light World items</a></li>
+		<!-- <li><a href="{{ '/misc/phone' | relative_url }}">Phone</a> - Dialogue for making calls</li> -->
 	</ul>
 </section>
 
